Revert "merge tag jbr-release-17.0.4b469.53"
This reverts commit 726350e08f9fdcef676982613902d1b90c1aadd7, reversing
changes made to 6b70a87352d69ec9c1b43549220252b4d8deca16.

Change-Id: If087602b9974d6cb28f83cfc3881f7a70c469506