@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -264,6 +264,12 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
 
     /* Used to indicate required return type from toArray(..); */
     private static String[] STR_ARRAY = new String[0];
+
+    /**
+     * Deprecated, unsupported hack - actually invokes a bug!
+     * Left in for a customer, don't remove.
+     */
+    private boolean usePlatformFontMetrics = false;
 
     /**
      * Returns the global SunFontManager instance. This is similar to
@@ -559,6 +565,22 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
             }
         });
 
+        boolean platformFont = AccessController.doPrivileged(
+            new PrivilegedAction<Boolean>() {
+                    public Boolean run() {
+                        String prop = System.getProperty("java2d.font.usePlatformFont");
+                        String env = System.getenv("JAVA2D_USEPLATFORMFONT");
+                        return "true".equals(prop) || env != null;
+                    }
+            });
+
+        if (platformFont) {
+            usePlatformFontMetrics = true;
+            System.out.println("Enabling platform font metrics for win32. This is an unsupported option.");
+            System.out.println("This yields incorrect composite font metrics as reported by 1.1.x releases.");
+            System.out.println("It is appropriate only for use by applications which do not use any Java 2");
+            System.out.println("functionality. This property will be removed in a later release.");
+        }
     }
 
     public Font2DHandle getNewComposite(String family, int style,
@@ -2288,6 +2310,15 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         }
     }
 
+    /*
+     * Workaround for apps which are dependent on a font metrics bug
+     * in JDK 1.1. This is an unsupported win32 private setting.
+     * Left in for a customer - do not remove.
+     */
+    public boolean usePlatformFontMetrics() {
+        return usePlatformFontMetrics;
+    }
+
     public int getNumFonts() {
         return physicalFonts.size()+maxCompFont;
     }
@@ -3448,7 +3479,14 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
                 }
             }
 
-            String[] fontNames = fontMapNames.keySet().toArray(new String[0]);
+            String[] fontNames = null;
+            if (fontMapNames.size() > 0) {
+                fontNames = new String[fontMapNames.size()];
+                Object [] keyNames = fontMapNames.keySet().toArray();
+                for (int i=0; i < keyNames.length; i++) {
+                    fontNames[i] = (String)keyNames[i];
+                }
+            }
             Font[] fonts = new Font[fontNames.length];
             for (int i=0; i < fontNames.length; i++) {
                 fonts[i] = new Font(fontNames[i], Font.PLAIN, 1);
@@ -3517,7 +3555,11 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         // Add any native font family names here
         addNativeFontFamilyNames(familyNames, requestedLocale);
 
-        String[] retval = familyNames.values().toArray(new String[0]);
+        String[] retval =  new String[familyNames.size()];
+        Object [] keyNames = familyNames.keySet().toArray();
+        for (int i=0; i < keyNames.length; i++) {
+            retval[i] = familyNames.get(keyNames[i]);
+        }
         if (requestedLocale.equals(Locale.getDefault())) {
             lastDefaultLocale = requestedLocale;
             allFamilies = new String[retval.length];
@@ -3593,7 +3635,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
                     String language = System.getProperty("user.language", "en");
                     String country  = System.getProperty("user.country","");
                     String variant  = System.getProperty("user.variant","");
-                    return Locale.of(language, country, variant);
+                    return new Locale(language, country, variant);
                 }
             });
         }
